objects/vlocity_cmt__SpecTemplateAttributeMapping__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>Spec Template Attribute Mapping globally unique identifier which is used across Salesforce orgs and potentially within other systems. Any globally unique identifier can be used when migrated from other initiating systems.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MappedAttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the attributes associated with/ without ObjectType to be mapped to spec template attributes.</description>
        <label>Mapped Attribute</label>
        <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
        <relationshipLabel>Spec Template Attribute Mappings</relationshipLabel>
        <relationshipName>TemplateAttributeMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MappedPricingVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the attributes associated with pricing variable to be mapped to spec template attributes.</description>
        <label>Mapped Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipLabel>Spec Template Attribute Mappings</relationshipLabel>
        <relationshipName>SpecTemplateAttributeMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SpecTemplateAttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents a spec template atrribute imported from a technical, rating or billing engine catalog.</description>
        <inlineHelpText>Represents a spec template atrribute imported from a technical, rating or billing engine catalog.</inlineHelpText>
        <label>Spec Template Attribute</label>
        <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
        <relationshipLabel>Spec Template Attribute Mappings (Spec Template Attribute)</relationshipLabel>
        <relationshipName>SpecTemplateAttributeMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SpecTemplateMappingId__c</fullName>
        <description>Defines the spec template Mapping to which the attribute mapping records are stored.</description>
        <label>Spec Template Mapping</label>
        <referenceTo>vlocity_cmt__SpecTemplateMapping__c</referenceTo>
        <relationshipLabel>Spec Template Attribute Mappings</relationshipLabel>
        <relationshipName>SpecTemplateAttributeMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Spec Template Attribute Mapping</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__SpecTemplateMappingId__c</columns>
        <columns>vlocity_cmt__MappedPricingVariableId__c</columns>
        <columns>vlocity_cmt__SpecTemplateAttributeId__c</columns>
        <columns>vlocity_cmt__MappedAttributeId__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Spec Template Attribute Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spec Template Attribute Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>